# bell

./: Cargo.toml  README.md
bell/: Cargo.toml  main.bell
bell/cli/: Cargo.toml  main.rs
bell/cli/src/: lib.rs  main.rs
bell/lang/: Cargo.toml
bell/lang/src/: lib.rs
bell/lang/src/backend/: compiler_backend.rs  datapack.rs  mir.rs  mod.rs
bell/lang/src/core/: alias.rs  ast.rs  error.rs  file.rs  mod.rs  token.rs  util.rs
bell/lang/src/front_end/: lexer.rs  mod.rs  module.rs  parser.rs  type_checker.rs
bell/lang/src/frontend/: lexer.rs  mir.rs  mod.rs  parser.rs  type_checker.rs
bell/lang/src/middle_end/: checker.rs  hir.rs  mod.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
examples/: conditionals.bell  factorial.bell  loops.bell  primes.bell  stresstest.bell
lang/: Cargo.toml
lang/src/: lib.rs
lang/src/core/: ast.rs  error.rs  file.rs  mod.rs  span.rs  token.rs  types.rs
lang/src/front_end/: analyser.rs  lex.rs  lexer.rs  mod.rs  module.rs  parse.rs  parser.rs
lang/src/middle_end/: check.rs  gather.rs  hir.rs  mod.rs
