[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Replace this with a proper version when the time comes.
chumsky = { git = "https://github.com/zesterer/chumsky.git" }
camino = "1.0.5"
internment = "0.5.4"
